...
        selectedIndex: index,
        onDestinationSelected: (i) => setState(() => index = i),
        destinations: const [
          NavigationDestination(
            icon: Icon(Icons.map_outlined),
            selectedIcon: Icon(Icons.map),
            label: 'Ofertas',
          ),
          NavigationDestination(
            icon: Icon(Icons.route_outlined),
            label: 'Corridas',
          ),
          NavigationDestination(
            icon: Icon(Icons.account_balance_wallet_outlined),
            label: 'Carteira',
          ),
          NavigationDestination(
...
